<resources>
    <string name="app_name">Task Tracker</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_home">Home</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="text_title">Title</string>
    <string name="text_details">Details</string>
    <string name="desc_image">Image</string>
    <string name="text_task_created">Task Created</string>
    <string name="text_task_6">Task 6</string>
    <string name="text_task_5">Task 5</string>
    <string name="text_task_4">Task 4</string>
    <string name="text_task_3">Task 3</string>
    <string name="text_task_2">Task 2</string>
    <string name="text_task_1">Task 1</string>

</resources>