<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/titleTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="none"
            android:background="@color/white"
            android:fontFamily="@font/poppins"
            android:hint="@string/text_title"
            android:inputType="textCapWords"
            android:paddingVertical="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/secondary"
            app:layout_constraintEnd_toStartOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/titleTextField"
            app:layout_constraintEnd_toStartOf="@id/editButton"
            app:layout_constraintTop_toTopOf="@id/titleTextField"
            app:srcCompat="@drawable/ic_checklist" />

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/titleTextField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextField"
            app:srcCompat="@drawable/ic_edit_top" />

        <EditText
            android:id="@+id/detailsTextField"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="8dp"
            android:autofillHints="none"
            android:background="@drawable/bg_text_field"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/text_details"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextField" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/bg_text_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextField" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_picture" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_notification_bell" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_color_palette" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_archive" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_arrow_hook_up_left" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_arrow_hook_up_right" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@id/view"
            app:srcCompat="@drawable/ic_overflow" />

        <TextView
            android:id="@+id/tasksHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_task_created"
            android:textColor="@color/secondary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_image"
            android:padding="4dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/tasksHeaderText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tasksHeaderText"
            app:srcCompat="@drawable/ic_sort" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksList"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_task"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tasksHeaderText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>